pkg/lang/testdata/ub/inputs/invalid/default-composite-element.ub
inputs: {
  names: { type: list(string), default: [1] }
}
